Fix card up animation on mobile

--- a/src/css/sections/card.scss
+++ b/src/css/sections/card.scss
@@ -31,7 +31,4 @@
     from {
         margin-top: 100vh;
     }
-    to {
-        margin-top: var(--cardMarginTop);
-    }
 }
